# drone-graph-slam

./: .gitignore  LICENSE  README.md
evaluation/: publish.sh
evaluation/comparison/: run_comparison.sh  test_run_comparison_ac6.sh
evaluation/comparison/lio_sam/: README.md  export_from_run_csv.py
evaluation/comparison/ours/: export_from_eval05_csv.py  run_ours.sh
evaluation/results/: metrics.json  report.md
evaluation/slam_eval/: README.md  __init__.py  __main__.py  associate.py  consistency.py  metrics.py  plots.py  report.py  tum_io.py
graph_slam/: .clang-format  .clang-tidy  CMakeLists.txt  package.xml
graph_slam/config/: drone_graph_slam_sim.rviz  ndt14_baseline.yaml  slam_params.yaml
graph_slam/include/graph_slam/: initial_guess.hpp  ndt_registrar.hpp  ndt_voxel_grid.hpp  pcl_ndt_baseline.hpp  point_types.hpp  preprocessor.hpp  registration_gate.hpp  registration_result.hpp
graph_slam/include/graph_slam/eval/: graph_visualizer.hpp  relative_error.hpp  trajectory_metrics.hpp
graph_slam/include/graph_slam/graph/: graph_bootstrap.hpp  graph_optimizer.hpp  keyframe_policy.hpp  odometry_accumulator.hpp  odometry_factor_builder.hpp
graph_slam/include/graph_slam/loop/: loop_closure_candidate_finder.hpp  loop_closure_verifier.hpp
graph_slam/include/graph_slam/preprocess/: quality_checker.hpp
graph_slam/launch/: eval02_relative_error.launch.py  eval03_overlay.launch.py  graph_backend.launch.py  ndt_frontend.launch.py
graph_slam/rviz/: eval03_overlay.rviz
graph_slam/scripts/: eval02_relative_error.py  eval02_trajectory.py  eval03_plot.py  eval05_nees.py  eval05_plot.py  eval06_stamp_sync.py  ndt04_quality_smoke.py  ndt14_replay_harness.py
graph_slam/src/: eval02_relative_error_node.cpp  eval03_overlay_node.cpp  graph_backend_main.cpp  graph_backend_node.cpp  graph_backend_node.hpp  graph_visualizer_node.cpp  ndt_frontend_main.cpp  ndt_frontend_node.cpp  ndt_frontend_node.hpp  ndt_registrar.cpp  ndt_voxel_grid.cpp  pcl_ndt_baseline.cpp  preprocessor.cpp  quality_checker.cpp  registration_gate.cpp  relative_error.cpp  trajectory_metrics.cpp
graph_slam/src/eval/: graph_visualizer.cpp
graph_slam/src/graph/: graph_bootstrap.cpp  graph_optimizer.cpp  odometry_accumulator.cpp  odometry_factor_builder.cpp
graph_slam/src/loop/: loop_closure_candidate_finder.cpp  loop_closure_verifier.cpp
graph_slam/test/: test_eval03_overlay.cpp  test_graph_backend_node.cpp  test_graph_bootstrap.cpp  test_graph_optimizer.cpp  test_graph_visualizer.cpp  test_keyframe_policy.cpp  test_loop_closure_candidate_finder.cpp  test_loop_closure_verifier.cpp  test_ndt14_harness.py  test_ndt_covariance.cpp  test_ndt_frontend_node.cpp  test_ndt_registrar.cpp  test_ndt_voxel_grid.cpp  test_odometry_accumulator.cpp  test_odometry_factor_builder.cpp  test_preprocessor.cpp  test_quality_checker.cpp  test_registration_gate.cpp  test_relative_error.cpp  test_tf_tree.cpp  test_trajectory_metrics.cpp
px4_offboard/: package.xml  setup.py
px4_offboard/config/: drone_rviz.rviz
px4_offboard/launch/: ekf2_odometry_adapter.launch.py  gazebo_truth_bridge.launch.py  ground_truth_bridge.launch.py
px4_offboard/px4_offboard/: ekf2_odometry_adapter.py  gazebo_truth_bridge.py  ground_truth_bridge.py  imu_bridge.py  imu_bridge_liosam.py  ned_to_enu.py  odom_logger.py  offboard_control.py
px4_offboard/test/: test_ekf2_odometry_adapter.py  test_gazebo_truth_bridge.py  test_ned_to_enu.py
